--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,1 @@
-@import '~bootstrap/scss/bootstrap';
-
-// @import './app.scss';
-// @import './components/NavLink/index.scss';
+@import './app.scss';
