--- a/src/pages/Home/components/PreviewSection/PreviewSection.css
+++ b/src/pages/Home/components/PreviewSection/PreviewSection.css
@@ -8,15 +8,14 @@ img{
 
 }
 .TutorCard{
-    margin: 10px;
+    margin: 20px;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 10px 5px 5px rgba(189, 185, 185, 0.97);
-    /*width: 200px;*/
     background-color: white;
     font-size: 15px;
     font-weight: bold;
-
+    width: 500px;
 }
 .TutorName{
     font-size: 20px;
@@ -28,9 +27,16 @@ img{
 
 }
 .TutorIntro{
-    font-size: 10px;
+    font-size: 20px;
     font-weight: lighter;
     padding: 15px;
+    width: 100%;
+    height: 150px;
+    display: -webkit-box;
+    -webkit-line-clamp:4;
+    overflow: hidden;
+    text-overflow:ellipsis;
+
 }
 .priceTag{
     color: red;
@@ -58,6 +64,8 @@ img{
     margin: 30px 0px;
     padding: 0% 10%;
     width: 100%;
+    display: flex;
+    flex-wrap: wrap;
 
 }
 .swiper {
@@ -66,6 +74,5 @@ img{
 }
 
 .swiper-slide {
-    text-align: center;
     font-size: 18px;
 }
