--- a/src/app.scss
+++ b/src/app.scss
@@ -55,4 +55,4 @@ $theme-colors: (
 );
 
 /* import bootstrap to set changes */
-@import "~bootstrap/scss/bootstrap";
+// @import "~bootstrap/scss/bootstrap"
